--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
 fastai==2.7.13
 numpy==1.24.3
-openai==1.3.7
-Pillow==9.4.0
-Pillow==10.1.0
+openai
 Pillow==10.1.0
 streamlit==1.28.2
 tensorflow==2.14.0
-tensorflow_intel==2.14.0
-transformers==2.1.1
-transformers==4.34.1
+tensorflow_intel
+transformers
+
